// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Component should render loading component if isLoading is true 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center items-center space-y-4"
  >
    <h2
      class="text-lg sm:text-2xl font-bold tracking-widest undefined"
    >
      Server Timestamp
    </h2>
    <article
      class="rounded shadow-lg bg-white overflow-scroll sm:min-w-[600px] h-[400px] xl:h-[500px] max-w-sm lg:max-w-2xl flex flex-col space-y-10 p-10 justify-center items-center"
    >
      <div
        class="text-2xl animate-pulse undefined"
      >
        Updating ...
      </div>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Time Component should render time component if isLoading is false 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center items-center space-y-4"
  >
    <h2
      class="text-lg sm:text-2xl font-bold tracking-widest undefined"
    >
      Server Timestamp
    </h2>
    <article
      class="rounded shadow-lg bg-white overflow-scroll sm:min-w-[600px] h-[400px] xl:h-[500px] max-w-sm lg:max-w-2xl flex flex-col space-y-10 p-10 justify-center items-center"
    >
      <div
        class="text-sm sm:text-lg tracking-wider"
      >
        <span
          class="text-sm sm:text-2xl bg-black text-white mr-2 p-2 rounded"
        >
          Server Timestamp:
        </span>
         
        <span
          data-testid="server-time"
        >
          100
        </span>
      </div>
      <div
        class="text:sm sm:text-lg tracking-wider"
      >
        <span
          class="text-sm sm:text-2xl bg-rose-700 text-white mr-2 p-2 rounded"
        >
          Time Difference:
        </span>
         
        <span
          data-testid="time-difference"
        >
          0:0:0
        </span>
      </div>
    </article>
  </div>
</DocumentFragment>
`;
